--- a/RoomArrangement/RoomArrangement.csproj
+++ b/RoomArrangement/RoomArrangement.csproj
@@ -49,12 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Rectangle.cs" />
     <Compile Include="RoomGeneticElements.cs" />
-    <Compile Include="RoomDB.cs" />
-    <Compile Include="Structs.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Database.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
