--- a/RoomArrangement/RoomArrangement.csproj
+++ b/RoomArrangement/RoomArrangement.csproj
@@ -51,7 +51,10 @@
   <ItemGroup>
     <Compile Include="Algorithms\PushPull.cs" />
     <Compile Include="BldgProgram.cs" />
-    <Compile Include="RoomTypes.cs" />
+    <Compile Include="RoomTypes\Bedroom.cs" />
+    <Compile Include="RoomTypes\Kitchen.cs" />
+    <Compile Include="RoomTypes\LivingRoom.cs" />
+    <Compile Include="RoomTypes\Corridor.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Structs\Vector.cs" />
     <Compile Include="Structs\Rectangle.cs" />
@@ -66,6 +69,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
