--- a/RoomArrangement/RoomArrangement.csproj
+++ b/RoomArrangement/RoomArrangement.csproj
@@ -51,7 +51,9 @@
   <ItemGroup>
     <Compile Include="Algorithms\PushPull.cs" />
     <Compile Include="BldgProgram.cs" />
+    <Compile Include="House.cs" />
     <Compile Include="RoomTypes\Bedroom.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="RoomTypes\Kitchen.cs" />
     <Compile Include="RoomTypes\LivingRoom.cs" />
     <Compile Include="RoomTypes\Corridor.cs" />
@@ -63,7 +65,6 @@
     <Compile Include="Room.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Database.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
