Changing Accessors for use with Interactive

--- a/RoomArrangement/RoomArrangement.csproj
+++ b/RoomArrangement/RoomArrangement.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Algorithms\PushPull.cs" />
     <Compile Include="BldgProgram.cs" />
+    <Compile Include="BldgProgramNew.cs" />
     <Compile Include="MyGraph\Graph.cs" />
     <Compile Include="MyGraph\Node.cs" />
     <Compile Include="House.cs" />
@@ -65,7 +66,7 @@
     <Compile Include="RoomTypes\LivingRoom.cs" />
     <Compile Include="RoomTypes\Corridor.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="RoomTypes\MainRoom.cs" />
+    <Compile Include="RoomTypes\Root.cs" />
     <Compile Include="RoomTypes\Office.cs" />
     <Compile Include="RoomTypes\Reception.cs" />
     <Compile Include="Structs\Vector.cs" />
