--- a/RoomArrangement/RoomArrangement.csproj
+++ b/RoomArrangement/RoomArrangement.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Room.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempHelperMethods\RequestInputPlaceholder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
